<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/normal_space">

    <TextView
        android:layout_width="@dimen/extra_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/no_mark"/>

    <TextView
        android:layout_width="@dimen/big_image"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/image"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:layout_width="@dimen/normal_short_text"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/product"/>

    <TextView
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:maxLines="1"
        android:text="@string/qty"/>

    <TextView
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:visibility="@string/secondary_column"
        android:text="@string/warehouse"/>

    <TextView
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:visibility="@string/secondary_column"
        android:text="@string/last_inputted_date"/>

    <TextView
        android:layout_width="@dimen/short_width"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/action"/>

</LinearLayout>