<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.sunwell.pos.mobile.activity.LoginActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_sign_in_greet"
        android:textSize="@dimen/large_font" />

    <TextView
        android:id="@+id/text_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_extra_space"
        tools:text="Company Name"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/huge_font" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_extra_space"
        android:text="@string/sign_in_greet"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_font" />


    <EditText
        android:id="@+id/input_email"
        android:layout_width="@dimen/normal_long_input"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="@dimen/normal_long_input"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <CheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password" />

</LinearLayout>
