<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_header_no"
        android:layout_width="@dimen/extra_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/no_mark"/>

    <TextView
        android:id="@+id/text_header_member_no"
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/member_no"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_header_name"
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/name" />


    <TextView
        android:id="@+id/text_header_phone"
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/phone"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_header_email"
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/email"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_header_action"
        android:layout_width="@dimen/short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/action" />


</LinearLayout>