<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_no"
        android:layout_width="@dimen/extra_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:maxLines="1"
        android:text="@string/no_mark"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="@dimen/normal_short_text"
        android:minWidth="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:layout_weight="1"
        android:text="@string/name"
    />

    <TextView
        android:id="@+id/text_method"
        android:layout_width="@dimen/normal_short_text"
        android:minWidth="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/method"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_active"
        android:layout_width="@dimen/short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:maxLines="1"
        android:text="@string/active"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_discount"
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:maxLines="1"
        android:text="@string/discount"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_min_payment"
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:maxLines="1"
        android:text="@string/min_payment"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_max_payment"
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:maxLines="1"
        android:text="@string/max_payment"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:layout_width="@dimen/short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:maxLines="1"
        android:text="@string/action"
        />

    <!--<LinearLayout-->
        <!--android:layout_width="72dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="6dp"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageButton-->
            <!--android:id="@+id/button_edit"-->
            <!--android:layout_width="36dp"-->
            <!--android:layout_height="36dp"-->
            <!--android:scaleType="fitCenter"-->
            <!--app:srcCompat="@drawable/edit"/>-->

        <!--<ImageButton-->
            <!--android:id="@+id/button_delete"-->
            <!--android:layout_width="36dp"-->
            <!--android:layout_height="36dp"-->
            <!--android:scaleType="fitCenter"-->
            <!--app:srcCompat="@drawable/delete"/>-->

    <!--</LinearLayout>L-->

</LinearLayout>