<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.sunwell.pos.mobile.activity.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_extra_space"
        android:text="@string/company_sign_in_greet"
        android:textSize="@dimen/mid_large_font"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_email_greet"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="@dimen/normal_long_input"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont" />

</LinearLayout>
