<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/text_no"
        android:layout_width="@dimen/extra_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textStyle="bold"
        android:text="@string/no_mark"/>


    <TextView
        android:id="@+id/text_invoice_no"
        android:layout_width="@dimen/short_long_text"
        android:minWidth="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/invoice_no"
    />

    <TextView
        android:id="@+id/text_invoice_date"
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textStyle="bold"
        android:text="@string/date"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_customer"
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textStyle="bold"
        android:text="@string/customer"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_total_amount"
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textStyle="bold"
        android:text="@string/total_amount"
        />

    <TextView
        android:id="@+id/text_method"
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textStyle="bold"
        android:text="@string/method"
        android:visibility="@string/secondary_column"/>

    <!--<TextView-->
        <!--android:id="@+id/text_card_number"-->
        <!--android:layout_width="@dimen/short_long_text"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="@dimen/normal_short_space"-->
        <!--android:textStyle="bold"-->
        <!--android:text="@string/card_number"-->
        <!--/>-->

    <TextView
        android:id="@+id/text_cashier"
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textStyle="bold"
        android:text="@string/cashier"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_status"
        android:layout_width="@dimen/short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textStyle="bold"
        android:text="@string/status"
        android:visibility="@string/secondary_column"/>

    <TextView
        android:id="@+id/text_action"
        android:layout_width="@dimen/short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:textStyle="bold"
        android:text="@string/action"
        />

    <!--<LinearLayout-->
        <!--android:layout_width="72dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="6dp"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageButton-->
            <!--android:id="@+id/button_edit"-->
            <!--android:layout_width="36dp"-->
            <!--android:layout_height="36dp"-->
            <!--android:scaleType="fitCenter"-->
            <!--app:srcCompat="@drawable/edit"/>-->

        <!--<ImageButton-->
            <!--android:id="@+id/button_delete"-->
            <!--android:layout_width="36dp"-->
            <!--android:layout_height="36dp"-->
            <!--android:scaleType="fitCenter"-->
            <!--app:srcCompat="@drawable/delete"/>-->

    <!--</LinearLayout>L-->

</LinearLayout>