<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/text_name"
        android:layout_width="@dimen/normal_short_text"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/name"
        android:textSize="@dimen/small_font"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/text_qty"
        android:layout_width="@dimen/short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/qty"
        android:textSize="@dimen/small_font"/>

    <TextView
        android:id="@+id/text_disc"
        android:layout_width="@dimen/short_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/disc"
        android:textSize="@dimen/small_font"/>

    <TextView
        android:id="@+id/text_total"
        android:layout_width="@dimen/short_long_text"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_short_space"
        android:text="@string/total"
        android:textSize="@dimen/small_font"/>



</LinearLayout>