<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/menu_item_username"-->
        <!--android:title="Username"-->
        <!--app:actionViewClass="android.widget.Spinner"-->
        <!--android:spinnerMode="dialog"-->
        <!--app:showAsAction="ifRoom"/>-->
    <item
        android:id="@+id/menu_item_login"
        android:title="Log in"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_item_logout"
                android:title="@string/log_out"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/menu_item_profile"
                android:title="@string/profile"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_item_register"
        android:title="@string/register"
        app:showAsAction="ifRoom"/>
</menu>